--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -11,5 +11,5 @@ header .logo {
 	background: url("../images/logo.png");
 	width: 142px;
 	height: 60px;
-	padding-left: 20px;
+	margin-left: 20px;
 }
