add AirBNB clone -webstatic project

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -8,8 +8,9 @@ header  {
 }
 
 header .logo {
-	background: url("../images/logo.png");
+	display: flex;
 	width: 142px;
 	height: 60px;
 	margin-left: 20px;
+	background: url("../images/logo.png");
 }
