--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,12 +1,11 @@
 footer {
-	display: flex;
-	position: fixed;
 	background-color: white;
 	height: 60px;
 	width: 100%;
 	border-top: 1px solid #CCCCCC;
-	place-content: center;
-	position: absolute;
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	bottom: 0;
-	text-align: center;
 }
