--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -55,7 +55,7 @@
 }
 
 /* ******************************************/
-/* information box with icons */
+/* information box and icons */
 /* ******************************************/
 
 .information {
@@ -77,7 +77,7 @@
 
 /***********/
 /* icons   */
-
+/***********/
 .max_guest {
   background-image: url(../images/icon_group.png);
 }
