--- a/web_static/styles/102-common.css
+++ b/web_static/styles/102-common.css
@@ -17,7 +17,7 @@ html {
 }
 
 /****************************************************************************/
-/* mobile first resposive */
+/* mobile first resposive design*/
 /****************************************************************************/
 
 /* Extra small devices (phones, 600px and down) */
