--- a/web_static/styles/102-filters.css
+++ b/web_static/styles/102-filters.css
@@ -95,7 +95,7 @@
     margin: 5px auto 5px auto;
   }
 
-  /* drop down on hover */
+  /* drop down hover */
 
   .locations:hover,
   .amenities:hover {
