--- a/web_static/styles/103-filters.css
+++ b/web_static/styles/103-filters.css
@@ -104,7 +104,7 @@ article:focus {
     margin: 5px auto 5px auto;
   }
 
-  /* drop down on hover */
+  /* drop down hover */
 
   .locations:hover,
   .amenities:hover {
