--- a/web_static/styles/103-header.css
+++ b/web_static/styles/103-header.css
@@ -14,7 +14,7 @@ header {
   text-align: left;
 }
 /**************************************************************/
-/* rotate burger icon
+/* rotate burger menu icon
 /**************************************************************/
 
 .main_nav_burguer {
