--- a/web_static/styles/102-header.css
+++ b/web_static/styles/102-header.css
@@ -14,7 +14,7 @@ header {
   text-align: left;
 }
 /*****************************************************************/
-/* rotate burguer
+/* rotate burger menu icon
 /*****************************************************************/
 
 .main_nav_burguer {
